--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-<<<<<<< HEAD
 # JAVA #
 *.class
+*.jar
 
 # Maven #
 target
@@ -30,7 +30,7 @@ target
 *.jpg
 *.jpeg
 *.gif
-=======
+
 # Maven #
 target/
 */target/
@@ -43,4 +43,3 @@ target/
 .settings/
 .classpath
 .project
->>>>>>> 2b807e8cb11dcff2b51ad720ddd8e340f97d70cc
